ci: Rename CI workflow file for module boilerplates (#284)
* ci: Rename CI workflow file for module boilerplates

* feat: Add nix-direnv support and update dependencies

This commit adds support for nix-direnv, which allows for seamless integration of Nix with direnv. It also updates the dependencies in the flake.lock file, including the latest versions of flake-parts, treefmt-nix, and rust-overlay.

The key changes are:

- Add `flake-root` and `nix-direnv` as inputs in the flake.nix file.
- Update the `.envrc` file to enable experimental Nix features and use the flake-root module.
- Update the flake.lock file with the latest versions of the dependencies.
- Simplify the GolangCI-Lint recipes in the justfile by using the `nix develop` command.

These changes improve the developer experience by providing a more streamlined Nix-based development environment with support for direnv.

* feat: Update README with new Daggerverse feature and improve formatting

The changes in this commit include:

1. Update the README.md file in the `gotoolbox` and `module-template` directories to improve the formatting of the "NOTE" section.
2. Replace the hash symbol (#) with a greater-than symbol (>) to make the note stand out better.
3. Add a new [Daggerverse](https://daggerverse.dev/) feature to the README, indicating that this module brings a new Daggerverse feature.

* feat: Add Nix flake dependencies for direnv and pre-commit

This commit adds the necessary Nix flake dependencies for direnv and pre-commit support. Specifically, it includes the following changes:

- Adds the `flake-root` and `nix-direnv` dependencies for direnv integration.
- Adds the `pre-commit-hooks` dependency for pre-commit configuration.

These changes will enable a more streamlined development experience with Nix, direnv, and pre-commit hooks.

* feat: Update configuration files

- Update .github/stale.yml to remove unnecessary empty line
- Update .github/workflows/labels-ass

--- a/.daggerx/templates/mod-full/tests/testdata/apko-presets/base-alpine.yaml
+++ b/.daggerx/templates/mod-full/tests/testdata/apko-presets/base-alpine.yaml
@@ -1,50 +1,42 @@
 ---
 contents:
-    repositories:
-        - https://dl-cdn.alpinelinux.org/alpine/v3.20/main
-        - https://dl-cdn.alpinelinux.org/alpine/v3.20/community
-    packages:
-        - alpine-baselayout
-        - alpine-keys
-        - apk-tools
-        - busybox
-        - ca-certificates-bundle
-        - musl-dev
-        - curl
-        - bash
-        - wget
-        - unzip
-        - git
-        - tzdata
-        - openssl
-
+  repositories:
+    - https://dl-cdn.alpinelinux.org/alpine/v3.20/main
+    - https://dl-cdn.alpinelinux.org/alpine/v3.20/community
+  packages:
+    - alpine-baselayout
+    - alpine-keys
+    - apk-tools
+    - busybox
+    - ca-certificates-bundle
+    - musl-dev
+    - curl
+    - bash
+    - wget
+    - unzip
+    - git
+    - tzdata
+    - openssl
 accounts:
-    groups:
-        - groupname: terragrunt
-          gid: 65532
-    users:
-        - username: terragrunt
-          uid: 65532
-          gid: 65532
-    run-as: terragrunt
-
+  groups:
+    - groupname: terragrunt
+      gid: 65532
+  users:
+    - username: terragrunt
+      uid: 65532
+      gid: 65532
+  run-as: terragrunt
 entrypoint:
-    command: /bin/bash -l
-
+  command: /bin/bash -l
 # cmd: /bin/sh -l
-
-archs:
-    - x86_64
-    - aarch64
-
+archs: [x86_64, aarch64]
 environment:
-    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/terragrunt/bin:/home/terragrunt/.local/bin
-    TERRAGRUNT_PROVIDER_CACHE_DIR: /home/terragrunt/.terragrunt-cache
-    TERRAGRUNT_PROVIDER_CACHE: '1'
-    TZ: UTC
-    LANG: en_US.UTF-8
-    LC_ALL: en_US.UTF-8
-
+  PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/terragrunt/bin:/home/terragrunt/.local/bin
+  TERRAGRUNT_PROVIDER_CACHE_DIR: /home/terragrunt/.terragrunt-cache
+  TERRAGRUNT_PROVIDER_CACHE: '1'
+  TZ: UTC
+  LANG: en_US.UTF-8
+  LC_ALL: en_US.UTF-8
 # # Ensure home directory exists and is writable
 # paths:
 #     - path: /home/terragrunt
