--- a/.github/workflows/ci-mod-gotest.yml
+++ b/.github/workflows/ci-mod-gotest.yml
@@ -1,29 +1,21 @@
-name: CI {{.module_name_pkg}} 🧹
-
+---
+name: CI gotest 🧹
 on:
   push:
-    branches:
-      - main
-      - master
-    paths:
-      - {{.module_name_pkg}}/**
+    branches: [main, master]
+    paths: [gotest/**]
   pull_request:
-    paths:
-      - {{.module_name_pkg}}/**
-      - .github/workflows/ci-mod-{{.module_name_pkg}}.yml
+    paths: [gotest/**, .github/workflows/ci-mod-gotest.yml]
   workflow_dispatch:
-
 permissions:
   contents: read
   pull-requests: read
   checks: write
-
 env:
-  GO_VERSION: "1.22"
+  GO_VERSION: '1.22'
   DAGGER_VERSION: 0.14.0
   GOLANGCI_LINT_VERSION: v1.62.0
-  MODULE: {{.module_name_pkg}}
-
+  MODULE: gotest
 jobs:
   dagger-build:
     name: 🏗️ Build All Modules
@@ -33,9 +25,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📦 Dagger Develop Main Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}
@@ -43,9 +34,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🧪 Dagger Develop Tests Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/tests
@@ -53,9 +43,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📄 Dagger Develop Examples Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/examples/go
@@ -63,7 +52,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   main-module-ci:
     needs: dagger-build
     name: 🔬 Main Module Continuous Integration
@@ -73,9 +61,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📦 Dagger Develop Main Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}
@@ -83,9 +70,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📞 List Main Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ env.MODULE }}
@@ -93,15 +79,12 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🔧 Install Linter
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-
       - name: 📝 Lint Main Module
         run: cd ${{ env.MODULE }} && golangci-lint run --config=../.golangci.yml --verbose
-
   tests-module-ci:
     needs: dagger-build
     name: 🧪 Tests Module Continuous Integration
@@ -111,9 +94,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 🧪 Dagger Develop Tests Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/tests
@@ -121,9 +103,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📞 List Test Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ env.MODULE }}/tests
@@ -131,15 +112,13 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🔧 Install Linter
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-
       - name: 📝 Lint Tests Module
-        run: cd ${{ env.MODULE }}/tests && golangci-lint run --config=../../.golangci.yml --verbose
-
+        run: cd ${{ env.MODULE }}/tests && golangci-lint run --config=../../.golangci.yml
+          --verbose
   tests-module-test-execution:
     needs: tests-module-ci
     name: 🚀 Tests Module Test Execution
@@ -149,9 +128,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 🧪 Dagger Develop Tests Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/tests
@@ -159,9 +137,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 💣 Run Tests
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: call
           args: test-all
@@ -170,7 +147,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   examples-go-module-ci:
     needs: dagger-build
     name: 📄 Examples Go Module Continuous Integration
@@ -180,9 +156,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📄 Dagger Develop Examples Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/examples/go
@@ -190,9 +165,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📞 List Example Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ env.MODULE }}/examples/go
@@ -200,15 +174,13 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🔧 Install Linter
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-
       - name: 📝 Lint Examples Module
-        run: cd ${{ env.MODULE }}/examples/go && golangci-lint run --config=../../../.golangci.yml --verbose
-
+        run: cd ${{ env.MODULE }}/examples/go && golangci-lint run --config=../../../.golangci.yml
+          --verbose
   examples-go-module-recipe-execution:
     needs: examples-go-module-ci
     name: 🥗 Examples Go Module Recipe Execution
@@ -218,9 +190,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📄 Dagger Develop Examples Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: develop
           module: ${{ env.MODULE }}/examples/go
@@ -228,9 +199,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🥗 Run Recipes
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: call
           args: all-recipes
