--- a/.github/workflows/ci-mod-boilerplates.yaml
+++ b/.github/workflows/ci-mod-boilerplates.yaml
@@ -1,30 +1,23 @@
 ---
-name: CI Mod Templates 🧰
+name: CI Mod Boilerplates 🧰
 on:
   push:
-    branches:
-      - main
-      - master
-    paths:
-      - module-template/**
-      - module-template-light/**
+    branches: [main, master]
+    paths: [module-template/**, module-template-light/**]
   pull_request:
     paths:
       - module-template/**
       - module-template-light/**
-      - .github/workflows/ci-mod-templates.yaml
+      - .github/workflows/ci-mod-boilerplates.yaml
   workflow_dispatch:
-
 permissions:
   contents: read
   pull-requests: read
   checks: write
-
 env:
-  GO_VERSION: "1.22"
+  GO_VERSION: '1.22'
   DAGGER_VERSION: 0.14.0
-  GOLANGCI_LINT_VERSION: "v1.62.0"
-
+  GOLANGCI_LINT_VERSION: v1.62.0
 jobs:
   dagger-build:
     strategy:
@@ -38,7 +31,6 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📦 Dagger Develop Main Module
         uses: dagger/dagger-for-github@v6
         with:
@@ -48,7 +40,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🧪 Dagger Develop Test Module
         uses: dagger/dagger-for-github@v6
         with:
@@ -58,7 +49,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📄 Dagger Develop Examples Module
         uses: dagger/dagger-for-github@v6
         with:
@@ -68,7 +58,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   dagger-list-functions:
     needs: dagger-build
     strategy:
@@ -82,9 +71,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📦 List Main Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ matrix.module }}
@@ -92,9 +80,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🧪 List Test Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ matrix.module }}/tests
@@ -102,9 +89,8 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📄 List Example Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ matrix.module }}/examples/go
@@ -112,7 +98,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   run-tests:
     needs: dagger-build
     strategy:
@@ -126,9 +111,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 💣 Run All Tests
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: call
           args: test-all
@@ -137,7 +121,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   run-recipes:
     needs: dagger-build
     strategy:
@@ -151,9 +134,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 🥗 Run All Example Recipes
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: call
           args: all-recipes
@@ -162,7 +144,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   golangci-lint:
     needs: dagger-build
     strategy:
@@ -176,52 +157,44 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 🔧 Install Dagger CLI
         run: |
           curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
           dagger version
-
       - name: 🔧 Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-
       - name: 🚀 Dagger Develop Main Module
         run: |
           cd ${{ matrix.module }}
           dagger develop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📝 Run lint on Main Module
         run: |
           cd ${{ matrix.module }} && ls -ltrah && \
           golangci-lint run --config=../.golangci.yml --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🚀 Dagger Develop Test Module
         run: |
           cd ${{ matrix.module }}/tests && ls -ltrah && \
           dagger develop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📝 Run lint on Test Module
         run: |
           cd ${{ matrix.module }}/tests && ls -ltrah && \
           golangci-lint run --config=../../.golangci.yml --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🚀 Dagger Develop Example Module
         run: |
           cd ${{ matrix.module }}/examples/go
           dagger develop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📝 Run lint on Example Module
         run: |
           cd ${{ matrix.module }}/examples/go && ls -ltrah && \
