--- a/.github/workflows/labels-assigner.yml
+++ b/.github/workflows/labels-assigner.yml
@@ -1,34 +1,16 @@
 ---
 name: Assign labels on PR
 on:
-    pull_request:
-        types: [opened, labeled, unlabeled, synchronize]
-defaults:
-    run:
-        shell: bash
+  pull_request_target:
+    types: [opened, labeled, unlabeled, synchronize]
 permissions:
-    contents: read
-    pull-requests: write
+  contents: read
+  pull-requests: write
 jobs:
-    triage:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/labeler@v5
-              with:
-                  repo-token: ${{ secrets.GITHUB_TOKEN }}
-    size-label:
-        runs-on: ubuntu-latest
-        steps:
-            - name: size-label
-              uses: pascalgn/size-label-action@v0.4.3
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  sizes: >
-                      {
-                        "0": "XS",
-                        "15": "S",
-                        "30": "M",
-                        "50": "L",
-                        "250": "Too Large"
-                      }
+  labeler:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/labeler@v5
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          sync-labels: true
