--- a/test/testdata/goreleaser/simple-go-app/.goreleaser.yaml
+++ b/test/testdata/goreleaser/simple-go-app/.goreleaser.yaml
@@ -1,43 +1,27 @@
 ---
 project_name: simple-go-app
-
 before:
-    hooks:
-        - go mod tidy
+  hooks: [go mod tidy]
 builds:
-    - env:
-          - CGO_ENABLED=0
-      main: ./test/goreleaser/simple-go-app/main.go
-      goos:
-          - linux
-          - windows
-          - darwin
-      goarch:
-          - amd64
-          - arm
-          - arm64
-
+  - env: [CGO_ENABLED=0]
+    main: ./test/goreleaser/simple-go-app/main.go
+    goos: [linux, windows, darwin]
+    goarch: [amd64, arm, arm64]
 release:
-    prerelease: auto
-
+  prerelease: auto
 sboms:
-    - artifacts: archive
+  - artifacts: archive
 archives:
-    - wrap_in_directory: true
-      format_overrides:
-          - goos: windows
-            format: zip
+  - wrap_in_directory: true
+    format_overrides:
+      - goos: windows
+        format: zip
 checksum:
-    name_template: checksums.txt
-
+  name_template: checksums.txt
 snapshot:
-    name_template: '{{ .Tag }}-snapshot'
-
+  name_template: '{{ .Tag }}-snapshot'
 changelog:
-    skip: true
-    sort: asc
-    filters:
-        exclude:
-            - '^docs:'
-            - '^test:'
-            - '^*.md:'
+  skip: true
+  sort: asc
+  filters:
+    exclude: ['^docs:', '^test:', '^*.md:']
