--- a/.envrc
+++ b/.envrc
@@ -5,4 +5,8 @@ fi
 # Explicitly enable experimental features
 export NIX_CONFIG="experimental-features = nix-command flakes"
 
+# Development Environment Variables
+export DEV_MODE="true"
+export LOG_LEVEL="debug"
+
 use flake
