--- a/aws-tag-inspector/tests/testdata/apko-presets/base-alpine.yaml
+++ b/aws-tag-inspector/tests/testdata/apko-presets/base-alpine.yaml
@@ -17,7 +17,6 @@ contents:
     - git
     - tzdata
     - openssl
-
 accounts:
   groups:
     - groupname: terragrunt
@@ -27,24 +26,17 @@ accounts:
       uid: 65532
       gid: 65532
   run-as: terragrunt
-
 entrypoint:
   command: /bin/bash -l
-
 # cmd: /bin/sh -l
-
-archs:
-  - x86_64
-  - aarch64
-
+archs: [x86_64, aarch64]
 environment:
   PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/terragrunt/bin:/home/terragrunt/.local/bin
   TERRAGRUNT_PROVIDER_CACHE_DIR: /home/terragrunt/.terragrunt-cache
-  TERRAGRUNT_PROVIDER_CACHE: "1"
+  TERRAGRUNT_PROVIDER_CACHE: '1'
   TZ: UTC
   LANG: en_US.UTF-8
   LC_ALL: en_US.UTF-8
-
 # # Ensure home directory exists and is writable
 # paths:
 #     - path: /home/terragrunt
@@ -62,7 +54,6 @@ environment:
 #       uid: 65532
 #       gid: 65532
 #       permissions: 0o755
-
 annotations:
   title: Base Alpine for Terragrunt
   description: A minimal Alpine base image built with APKO for Terragrunt, optimized for security and performance.
